aplicação de estilos e utilização do " ::ng-deep "

--- a/Seção 3 Fundamentos do Angular Componentes e Estilizações/peojeto-components/src/app/card/card.component.scss
+++ b/Seção 3 Fundamentos do Angular Componentes e Estilizações/peojeto-components/src/app/card/card.component.scss
@@ -19,6 +19,7 @@
         font-weight: 600;
     font-size: 40px;
     }
-
-   
+}
+::ng-deep #cancel-button .card-cancel-button {
+    background-color: yellow !important;
 }
