--- a/Seção 3 Fundamentos do Angular Componentes e Estilizações/peojeto-components/src/app/card-roxo/card-roxo.component.html
+++ b/Seção 3 Fundamentos do Angular Componentes e Estilizações/peojeto-components/src/app/card-roxo/card-roxo.component.html
@@ -4,4 +4,8 @@
     <app-card-roxo-button></app-card-roxo-button>
     <app-card-button-cancel></app-card-button-cancel>
 
+    <mat-slider min="1" max="5" step="0.5">
+        <input matSliderThumb value="1.5">
+      </mat-slider>
+
 </div>
