--- a/Seção 3 Fundamentos do Angular Componentes e Estilizações/peojeto-components/src/app/card/card.component.scss
+++ b/Seção 3 Fundamentos do Angular Componentes e Estilizações/peojeto-components/src/app/card/card.component.scss
@@ -20,6 +20,7 @@
     font-size: 40px;
     }
 }
-::ng-deep #cancel-button .card-cancel-button {
-    background-color: yellow !important;
+
+:host ::ng-deep mat-slider .mdc-slider__track--active_fill{
+    border-color: aqua !important;
 }
