utilizando o view Encapsulation

--- a/Seção 3 Fundamentos do Angular Componentes e Estilizações/peojeto-components/src/app/card/card.component.scss
+++ b/Seção 3 Fundamentos do Angular Componentes e Estilizações/peojeto-components/src/app/card/card.component.scss
@@ -24,3 +24,7 @@
 :host ::ng-deep mat-slider .mdc-slider__track--active_fill{
     border-color: aqua !important;
 }
+
+.global {
+    background-color: green;
+}
