Property Binding dinamico

--- a/Seção 4 Fundamentos do Angular Binding, Diretivas, Templates e Decorators/modulo4/src/app/app.component.html
+++ b/Seção 4 Fundamentos do Angular Binding, Diretivas, Templates e Decorators/modulo4/src/app/app.component.html
@@ -1,5 +1,7 @@
 <br>
 <input id="meu-imput" [value]="inputText" [type]="inputType" [disabled]="isDisable" />
+<button (click)="setText()">Tipo Texto</button> |
+<button (click)="setPassword()">Tipo Senha</button>
 <br>
 <br>
 <button (click)="enableImput()">Habilitar</button> |
